sample-new.html updates
-Added advanced print options toggle to receipt, ticket, document tabs

--- a/qz-print/sample-new.html
+++ b/qz-print/sample-new.html
@@ -44,7 +44,7 @@
 				<input type="radio" name="label_print_format" value="ZPL-RAW">ZPL (Raw)</input><br />
 				<input type="radio" name="label_print_format" value="HTML5-PS">HTML5 (PostScript)</input><br />
 				<input type="radio" name="label_print_format" value="IMAGE-PS">Image (png, jpg, etc) (PostScript)</input><br /><br />
-				<a href="#" class="ui-button" id="label_print_button">Print Label</a><br />
+				<a href="#" class="ui-button" id="label_print_button">Print Label</a>
 				<input id="label_print_advanced" type="checkbox">Advanced Printing Options</input><br /><br/><br/>
 			</div>
 			
@@ -53,6 +53,7 @@
 				<input type="radio" name="receipt_print_format" value="ESCP-RAW" checked="checked">ESCP (Raw)</input><br />
 				<input type="radio" name="receipt_print_format" value="HTML5-PS">HTML5 (PostScript)</input><br /><br />
 				<a href="#" class="ui-button" id="receipt_print_button">Print Receipt</a>
+				<input id="receipt_print_advanced" type="checkbox">Advanced Printing Options</input><br /><br/><br/>
 			</div>
 			
 			<div id="tabs-ticket">
@@ -61,6 +62,7 @@
 				<input type="radio" name="ticket_print_format" value="HTML5-PS">HTML5 (PostScript)</input><br />
 				<input type="radio" name="ticket_print_format" value="IMAGE-PS">Image (png, jpg, etc) (PostScript)</input><br /><br />
 				<a href="#" class="ui-button" id="ticket_print_button">Print Receipt</a>
+				<input id="ticket_print_advanced" type="checkbox">Advanced Printing Options</input><br /><br/><br/>
 			</div>
 			
 			<div id="tabs-document">
@@ -73,6 +75,7 @@
 				<input type="radio" name="document_print_format" value="RTF-PS">RTF (PostScript)</input><br />
 				<input type="radio" name="document_print_format" value="IMAGE-PS">Image (png, jpg, etc) (PostScript)</input><br /><br />
 				<a href="#" class="ui-button" id="document_print_button">Print Receipt</a>
+				<input id="document_print_advanced" type="checkbox">Advanced Printing Options</input><br /><br/><br/>
 			</div>
 			
 			<div id="tabs-serial">
