--- a/qz-print/sample-new.html
+++ b/qz-print/sample-new.html
@@ -40,20 +40,20 @@
 			
 			<div id="tabs-label">
 				<label for="label_print_format">Print Format:</label><br />
-				<input type="radio" name="label_print_format" value="EPL-RAW" checked="checked">EPL (Raw)</input><br />
-				<input type="radio" name="label_print_format" value="ZPL-RAW">ZPL (Raw)</input><br />
-				<input type="radio" name="label_print_format" value="HTML5-PS">HTML5 (PostScript)</input><br />
-				<input type="radio" name="label_print_format" value="IMAGE-PS">Image (png, jpg, etc) (PostScript)</input><br /><br />
-				<a href="#" class="ui-button" id="label_print_button">Print Label</a>
-				<input id="label_print_advanced" type="checkbox">Advanced Printing Options</input><br /><br/><br/>
+				<input type="radio" name="label_print_format" id="EPL-RAW" value="EPL-RAW" checked="checked">EPL (Raw)</input><br />
+				<input type="radio" name="label_print_format" id="ZPL-RAW" value="ZPL-RAW">ZPL (Raw)</input><br />
+				<input type="radio" name="label_print_format" id="HTML5-PS" value="HTML5-PS">HTML5 (PostScript)</input><br />
+				<input type="radio" name="label_print_format" id="IMAGE-PS" value="IMAGE-PS">Image (png, jpg, etc) (PostScript)</input><br /><br />
+				<input id="label_print_advanced" type="checkbox">Advanced Printing Options</input><br /><br/>
+				<a href="#" class="ui-button" id="label_print_button">Print Label</a>				
 			</div>
 			
 			<div id="tabs-receipt">
 				<label for="receipt_print_format">Print Format:</label><br />
 				<input type="radio" name="receipt_print_format" value="ESCP-RAW" checked="checked">ESCP (Raw)</input><br />
 				<input type="radio" name="receipt_print_format" value="HTML5-PS">HTML5 (PostScript)</input><br /><br />
+				<input id="receipt_print_advanced" type="checkbox">Advanced Printing Options</input><br /><br/>
 				<a href="#" class="ui-button" id="receipt_print_button">Print Receipt</a>
-				<input id="receipt_print_advanced" type="checkbox">Advanced Printing Options</input><br /><br/><br/>
 			</div>
 			
 			<div id="tabs-ticket">
@@ -61,8 +61,8 @@
 				<input type="radio" name="ticket_print_format" value="PGL-RAW" checked="checked">PGL (Raw)</input><br />
 				<input type="radio" name="ticket_print_format" value="HTML5-PS">HTML5 (PostScript)</input><br />
 				<input type="radio" name="ticket_print_format" value="IMAGE-PS">Image (png, jpg, etc) (PostScript)</input><br /><br />
+				<input id="ticket_print_advanced" type="checkbox">Advanced Printing Options</input><br /><br/>
 				<a href="#" class="ui-button" id="ticket_print_button">Print Receipt</a>
-				<input id="ticket_print_advanced" type="checkbox">Advanced Printing Options</input><br /><br/><br/>
 			</div>
 			
 			<div id="tabs-document">
@@ -74,8 +74,8 @@
 				<input type="radio" name="document_print_format" value="HTML5-PS">HTML5 (PostScript)</input><br />
 				<input type="radio" name="document_print_format" value="RTF-PS">RTF (PostScript)</input><br />
 				<input type="radio" name="document_print_format" value="IMAGE-PS">Image (png, jpg, etc) (PostScript)</input><br /><br />
+				<input id="document_print_advanced" type="checkbox">Advanced Printing Options</input><br /><br/>
 				<a href="#" class="ui-button" id="document_print_button">Print Receipt</a>
-				<input id="document_print_advanced" type="checkbox">Advanced Printing Options</input><br /><br/><br/>
 			</div>
 			
 			<div id="tabs-serial">
