sample-new.html updates [print format selection]
-Styling changes
-When 'Advanced Printing Options' is checked it shows and hides the
advanced printing options
--When you change radios it displays the advanced printing options that
pertain to that print format

--- a/qz-print/sample-new.html
+++ b/qz-print/sample-new.html
@@ -111,6 +111,7 @@
 				<input type="radio" name="postscript_advanced_option" value="spoolever2">Print Spooling Every 2</input><br />
 				<input type="radio" name="postscript_advanced_option" value="printxml">Print XML</input><br />
 				<input type="radio" name="postscript_advanced_option" value="printhex">Print Hex</input><br />
+				<br/><a href="#" class="ui-button" id="ps_advanced_print_button">Print</a>
 			</div>
 		
 		</div>
