sample-new updates
improved the radio selection for advanced printing options

--- a/qz-print/sample-new.html
+++ b/qz-print/sample-new.html
@@ -95,7 +95,7 @@
 			</div>
 			
 		
-			<div id="EPL_raw_options">
+			<div id="raw_options">
 				<label for="raw_advanced_print_format">Advanced Printing Options:</label><br />
 				<input type="radio" name="raw_advanced_print_format" value="HexEPL-RAW">Print Hex</input><br />
 				<input type="radio" name="raw_advanced_print_format" value="XMLEPL-RAW">Print XML</input><br />
