--- a/qz-print/sample-new.html
+++ b/qz-print/sample-new.html
@@ -40,10 +40,10 @@
 			
 			<div id="tabs-label">
 				<label for="label_print_format">Print Format:</label><br />
-				<input type="radio" name="label_print_format" id="EPL-RAW" value="EPL-RAW" checked="checked">EPL (Raw)</input><br />
-				<input type="radio" name="label_print_format" id="ZPL-RAW" value="ZPL-RAW">ZPL (Raw)</input><br />
-				<input type="radio" name="label_print_format" id="HTML5-PS" value="HTML5-PS">HTML5 (PostScript)</input><br />
-				<input type="radio" name="label_print_format" id="IMAGE-PS" value="IMAGE-PS">Image (png, jpg, etc) (PostScript)</input><br /><br />
+				<input type="radio" name="label_print_format" value="EPL-RAW" checked="checked">EPL (Raw)</input><br />
+				<input type="radio" name="label_print_format" value="ZPL-RAW">ZPL (Raw)</input><br />
+				<input type="radio" name="label_print_format" value="HTML5-PS">HTML5 (PostScript)</input><br />
+				<input type="radio" name="label_print_format" value="IMAGE-PS">Image (png, jpg, etc) (PostScript)</input><br /><br />
 				<input id="label_print_advanced" type="checkbox">Advanced Printing Options</input><br /><br/>
 				<a href="#" class="ui-button" id="label_print_button">Print Label</a>				
 			</div>
