sample-new.html updates
- Advanced print options now properly displays based on which format is
selected
- Added two radio buttons for image density

--- a/qz-print/sample-new.html
+++ b/qz-print/sample-new.html
@@ -102,7 +102,10 @@
 				<input type="radio" name="raw_advanced_print_format" value="64EPL-RAW">Print Base64</input><br />
 				<input type="radio" name="raw_advanced_print_format" value="FileEPL-RAW">Print File</input><br />
 				<input type="radio" name="raw_advanced_print_format" value="ToFileEPL-RAW">Print To File</input><br />
-				<input type="radio" name="raw_advanced_print_format" value="PagesEPL-RAW">Print Spooling Every 2</input><br />
+				<input type="radio" name="raw_advanced_print_format" value="PagesEPL-RAW">Print Spooling Every 2</input><br /><br />
+				<label for="raw_advanced_print_density">Image Density:</label><br />
+				<input type ="radio" name="raw_advanced_print_density" value="single" disabled="disabled">Single(33)</input>
+				<input type ="radio" name="raw_advanced_print_density" value="double" disabled="disabled">Double(34)</input><br />
 				<br/><a href="#" class="ui-button" id="raw_advanced_print_button">Print</a>		
 			</div>
 			<div id="postscript_options">
