--- a/qz-print/sample.html
+++ b/qz-print/sample.html
@@ -10,6 +10,12 @@
 	*/
 	deployQZ();
 	
+	/**
+-	* Deploys different versions of the applet depending on Java version.
+-	* Useful for removing warning dialogs for Java 6.  This function is optional
+-	* however, if used, should replace the <applet> method.  Needed to address 
+-	* MANIFEST.MF TrustedLibrary=true discrepency between JRE6 and JRE7.
+-	*/
 	function deployQZ() {
     		var attributes = {id: "qz", code:'qz.PrintApplet.class', 
 			archive:'qz-print.jar', width:1, height:1};
